--- a/src/macrosignage/blueprints/display/templates/display/display.html
+++ b/src/macrosignage/blueprints/display/templates/display/display.html
@@ -1,15 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }}</title>
-</head>
-<body>
-<main>
-    <h1>{{ public_key }} Display</h1>
-</main>
-</body>
-</html>
+{% extends 'layouts/base.html' %}
+
+
+{% block main %}
+    <h1>Display ID: {{ display.public_key }} </h1>
+{% endblock %}
