fixed typo on script path

--- a/src/macrosignage/ui/templates/layouts/base.html
+++ b/src/macrosignage/ui/templates/layouts/base.html
@@ -16,7 +16,7 @@
 
     {% endblock %}
 </main>
-<script type="text/javascript" src="{{ url_for('static', filename='ja/materialize.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/main.min.js') }}"></script>
 </body>
 </html>
