added images and fonts to gitignore

--- a/src/macrosignage/blueprints/display/templates/display/display.html
+++ b/src/macrosignage/blueprints/display/templates/display/display.html
@@ -2,5 +2,48 @@
 
 
 {% block main %}
-    <h1>Display ID: {{ display.public_key }} </h1>
+
+    <div class="carousel carousel-slider fullscreen" data-autoplay="true" data-autoplay-interval="600">
+        <a class="carousel-item">
+            <img src="{{ url_for('static', filename='img/main.png') }}" alt="" class="background">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="carousel-logo">
+        </a>
+        <a class="carousel-item" href="#one!">
+            <img src="{{ url_for('static', filename='img/blackboard.jpg') }}" alt="" class="background">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="carousel-logo">
+            <img src="{{ url_for('static', filename='img/TapariosRancheroz.png') }}" alt="" class="carousel-product-image">
+            <div class="carousel-text">
+                <h1>Tapatios Rancheros</h1>
+            </div>
+{#            <div class="carousel-item-content">#}
+{#                <div class="slide-img">#}
+{#                    <img src="{{ url_for('static', filename='img/TapariosRancheroz.png') }}" alt="" class="animate-img">#}
+{#                </div>#}
+{#                <div class="slide-text">#}
+{#                    <h1 class="animate-title">Tapatios Rancheros</h1>#}
+{#                </div>#}
+{#            </div>#}
+        </a>
+        <a class="carousel-item">
+            <img src="{{ url_for('static', filename='img/blackboard.jpg') }}" alt="" class="background">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="carousel-logo">
+            <div class="carousel-item-content">
+                <div class="slide-img">
+                    <img src="{{ url_for('static', filename='img/tapatios.png') }}" alt="" class="animate-img">
+                </div>
+                <div class="slide-text">
+                    <h1 class="animate-title">Tapatios Regulares</h1>
+                </div>
+            </div>
+        </a>
+        <a class="carousel-item" href="#two!">
+            <img src="{{ url_for('static', filename='img/250x250_b.png') }}" class="background">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="carousel-logo">
+        </a>
+        <a class="carousel-item" href="#three!">
+            <img src="{{ url_for('static', filename='img/250x250_c.png') }}" class="background">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="carousel-logo">
+        </a>
+    </div>
+
 {% endblock %}
