--- a/src/macrosignage/ui/templates/layouts/base.html
+++ b/src/macrosignage/ui/templates/layouts/base.html
@@ -8,6 +8,7 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/icons.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/materialize.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animate.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.min.css') }}">
 </head>
 <body>
