--- a/src/macrosignage/blueprints/display/templates/display/display.html
+++ b/src/macrosignage/blueprints/display/templates/display/display.html
@@ -3,17 +3,17 @@
 
 {% block main %}
 
-    <div class="carousel carousel-slider fullscreen" data-autoplay="true" data-autoplay-interval="8">
+    <div class="carousel carousel-slider fullscreen" data-autoplay="true" data-autoplay-interval="60">
 
-        <a class="carousel-item">
-            <img src="{{ url_for('static', filename='img/background.jpg') }}" alt="" class="background">
-            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="logo-large">
-            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="logo animate">
-        </a>
+        {#        <a class="carousel-item">#}
+        {#            <img src="{{ url_for('static', filename='img/background.jpg') }}" alt="" class="background">#}
+        {#            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="logo-large">#}
+        {#            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="logo animate">#}
+        {#        </a>#}
 
         <a class="carousel-item center-align">
-            <img src="{{ url_for('static', filename='img/background.jpg') }}" alt="" class="background">
-            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="logo">
+            <img src="{{ url_for('static', filename='img/backgrounds/bg_01.jpg') }}" alt="" class="background">
+            <img src="{{ url_for('static', filename='img/LogoWeb.png') }}" alt="logo" class="logo">
             <img src="{{ url_for('static', filename='img/placeholder-1.png') }}" alt="" class="product-image">
             <div class="carousel-text">
                 <h1>Tapatios Rancheros</h1>
@@ -21,8 +21,8 @@
         </a>
 
         <a class="carousel-item center-align">
-            <img src="{{ url_for('static', filename='img/background.jpg') }}" alt="" class="background">
-            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo" class="logo">
+            <img src="{{ url_for('static', filename='img/backgrounds/bg_01.jpg') }}" alt="" class="background">
+            <img src="{{ url_for('static', filename='img/LogoWeb.png') }}" alt="logo" class="logo">
             <img src="{{ url_for('static', filename='img/placeholder-2.png') }}" alt="" class="product-image">
             <div class="carousel-text">
                 <h1>Tapatios Regulares</h1>
