--- a/src/macrosignage/ui/static/css/main.css
+++ b/src/macrosignage/ui/static/css/main.css
@@ -71,9 +71,9 @@ main {
 .carousel-item img.product-image {
     flex: 1 0 auto;
     max-height: 80vh;
-    max-width: 90vw;
+    max-width: 70vw;
     overflow: hidden;
-    margin: 1rem 4rem 0;
+    margin: 1rem auto 0;
 }
 
 .carousel-text {
