--- a/src/macrosignage/blueprints/core/templates/core/display.html
+++ b/src/macrosignage/blueprints/core/templates/core/display.html
@@ -7,6 +7,16 @@
 
     {% if display.slides %}
         <div class="carousel carousel-slider fullscreen" data-autoplay="true" data-autoplay-interval="8">
+            <a class="carousel-item center-align">
+                <div class="open-sign">
+                    <p>
+                        <span>O</span>
+                        <span>P</span>
+                        <span>E</span>
+                        <span>N</span>
+                    </p>
+                </div>
+            </a>
             {% for slide in display.slides %}
                 <a class="carousel-item center-align">
                     <img src="{{ url_for('download_file', filename=slide.background) }}" alt="" class="background">
