--- a/src/macrosignage/ui/static/css/main.css
+++ b/src/macrosignage/ui/static/css/main.css
@@ -13,6 +13,20 @@
     src: url('../fonts/TuckShop-Decoration.ttf') format('truetype');
 }
 
+:root {
+    --text-color: #f00;
+    --border-color: #3da7f8;
+    --animation-time: 1s;
+    --text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 5px var(--text-color),
+    0 0 10px var(--text-color), 0 0 10px var(--text-color),
+    0 0 10px var(--text-color), 0 0 10px var(--text-color),
+    0 0 20px var(--text-color), 0 0 30px var(--text-color),
+    0 0 40px var(--text-color), 0 0 55px var(--text-color),
+    0 0 75px var(--text-color);
+    --box-shadow: inset 0 0 50px var(--border-color), 0 0 10px var(--border-color),
+    0 0 20px var(--border-color), 0 0 30px var(--border-color);
+}
+
 html,
 body {
     height: 100vh;
@@ -74,6 +88,81 @@ main {
     max-width: 70vw;
     overflow: hidden;
     margin: 1rem auto 0;
+}
+
+.carousel-item > .open-sign {
+    background-color: transparent;
+    border: 5px solid rgba(255, 255, 255, 0.33);
+    border-radius: 250px;
+    padding: 14px 24px;
+    margin: 0 auto;
+    /*transform: rotate(-6deg);*/
+    animation: turnOnBorder 0.24s forwards step-end, flickerBorder calc(var(--animation-time) * 16) infinite step-end 1s;
+}
+
+.open-sign p {
+    font-family: Roboto, sans-serif;
+    margin: 0;
+    color: #FFFFFF;
+}
+
+
+.open-sign span {
+    font-size: 400px;
+}
+
+.open-sign p span {
+    opacity: 0.33;
+    animation: turnOn forwards step-end;
+}
+
+.open-sign p span:nth-child(1) {
+    animation-delay: 0.3s;
+}
+
+.open-sign p span:nth-child(2) {
+    animation-delay: 0.6s;
+}
+
+.open-sign p span:nth-child(3) {
+    animation-delay: 0.9s;
+}
+
+.open-sign p span:nth-child(4) {
+    animation: turnOn 0.27s forwards step-end, flicker var(--animation-time) infinite step-end 1s;
+}
+
+@keyframes turnOnBorder {
+    100% {
+        border: 3px solid #fff;
+        box-shadow: var(--box-shadow);
+        opacity: 1;
+    }
+}
+
+@keyframes turnOn {
+    100% {
+        text-shadow: var(--text-shadow);
+        opacity: 1;
+    }
+}
+
+@keyframes flicker {
+    0% {
+        text-shadow: var(--text-shadow);
+    }
+    99% {
+        text-shadow: none;
+    }
+}
+
+@keyframes flickerBorder {
+    0% {
+        box-shadow: var(--box-shadow);
+    }
+    99% {
+        box-shadow: none;
+    }
 }
 
 .carousel-text {
